# rein

./: Cargo.toml  LLM_TASK_TOOL_PLAN.md  PLAN.md  README.md  ROADMAP.md  getting-started.md
.agents/skills/run-rein-task/: SKILL.md
.claude/skills/run-rein-task/: SKILL.md
.github/workflows/: release.yml
lua/rein/: init.lua
src/: gh.rs  gitx.rs  lib.rs  main.rs  resolve.rs  state.rs  store.rs  sync.rs  task.rs  ui.rs  util.rs
src/commands/: exec.rs  local.rs  mod.rs  sync_cmd.rs
tests/: e2e.rs  ui_render.rs
