[package]
name = "reins"
version = "0.0.1"
edition = "2021"
description = "LLM task journal + shared inbox manager"
license = "MIT"
repository = "https://github.com/devgony/rein"
homepage = "https://github.com/devgony/rein"
readme = "README.md"
keywords = ["llm", "cli", "task", "agent", "github"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".claude/", ".github/", "lua/", ".luarc.json"]

# Package is `reins` (the singular `rein` is taken); the library and the
# installed binary are both `rein` — `cargo install reins` yields `rein`.
[lib]
name = "rein"
path = "src/lib.rs"

[[bin]]
name = "rein"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
fs2 = "0.4"
ratatui = "0.29"
crossterm = "0.28"
nucleo-matcher = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
